@@ -2,6 +2,15 @@
 This file is in the public domain.
 
 ==============================================================
+LuaTeX Release 1.0.4  was released 2017033109
+==============================================================
+
+Several small fixes. This version will go on texlive.
+
+
+
+
+==============================================================
 LuaTeX Release 1.0.3  was released 2017021514
 ==============================================================
 
